force-app/main/default/objects/Country__c/fields/Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Country_Code__c</fullName>
    <description>International dialing code for this country (e.g., 41 for Switzerland, 1 for USA). Used for phone number validation.</description>
    <label>Phone Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>